<resources>
    <string name="app_name">Stock</string>
    <string name="test">TEST</string>
    <string name="pickstart">開始選股</string>
    <string name="ntutlogo">TODO</string>
    <string name="textview">TextView</string>
    <string name="choosenum">已選n個條件</string>
    <string name="Yes">確認</string>
    <string name="re">重選</string>
    <string name="break_5ma_up">突破五日線</string>
    <string name="break_5ma_up_button">突破五日線向上</string>
    <string name="break_10ma_up_button">突破十日線向上</string>
    <string name="break_20ma_up_button">突破月線向上</string>
    <string name="break_5ma_down_button">突破五日線向下</string>
    <string name="break_10ma_down_button">突破十日線向下</string>
    <string name="break_20ma_down_button">突破月線向下</string>
    <string name="break_day_kd_up_button">日KD交叉向上</string>
    <string name="break_day_kd_down_button">日KD交叉向下</string>
    <string name="day_MACD_break_up_button">日MACD負轉正</string>
    <string name="day_MACD_break_down_button">日MACD正轉負</string>
    <string name="foreign_investor_buyout_3days_button">外資連三買</string>
    <string name="foreign_investor_buyout_5days_button">外資連五買</string>
    <string name="investment_trust_buyout_3days_button">投信連三買</string>
    <string name="investment_trust_buyout_5days_button">投信連五買</string>
    <string name="foreign_investor_soldout_3days_button">外資連三賣</string>
    <string name="foreign_investor_soldout_5days_button">外資連五賣</string>
    <string name="investment_trust_soldout_3days_button">投信連三賣</string>
    <string name="investment_trust_soldout_5days_button">投信連五賣</string>
    <string name="btn_choose_again">重新選擇</string>
    <string name="btn_total_result">符合條件個股共有X隻</string>
    <string name="choosenum_0_text">已選擇0個條件</string>
    <string name="btn_text_choosenum">共選擇N個條件</string>
    <string name="btn_text_result">看結果</string>
</resources>