<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/textview"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/tec_break_5ma_up"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_long_btn"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_5ma_up_button"
        android:textColor="#000000"
        android:textSize="14sp" />

        <Button
        android:id="@+id/tec_break_10ma_up"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_long_btn"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_10ma_up_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_20ma_up"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_long_btn"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_20ma_up_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_5ma_down"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_short_btn"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_5ma_down_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_10ma_down"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_short_btn"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_10ma_down_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_20ma_down"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_short_btn"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_20ma_down_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_day_kd_up"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_long_btn"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_day_kd_up_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_day_kd_down"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_short_btn"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/break_day_kd_down_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_day_MACD_up"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_long_btn"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/day_MACD_break_up_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tec_break_day_MACD_down"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_short_btn"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/day_MACD_break_down_button"
        android:textColor="#000000"
        android:textSize="14sp" />

    <View
        android:id="@+id/under_index"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:padding="0dp"
        android:background="#9D9D9D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

<!--    <TextView-->
<!--        android:id="@+id/text_choosenum"-->
<!--        android:layout_width="410dp"-->
<!--        android:layout_height="50dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:text="@string/choosenum_0_text"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="30sp"-->
<!--        android:gravity="center_vertical|left"-->
<!--        tools:ignore="MissingConstraints,RtlHardcoded" />-->

    <Button
        android:id="@+id/pickend"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_pickup_btn"
        android:text="@string/Yes"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>