<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/activity_picking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_pick"
        android:padding="0dp">

        <Button
            android:id="@+id/return_home"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_btn"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="回首頁"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/num_choose_text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/btn_text_choosenum"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="130dp"/>

        <TextView
            android:id="@+id/stock_num_choose_text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="符合條件有0隻股票"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="125dp"/>

        <Button
            android:id="@+id/pickend_next"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_btn"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="0dp"
            android:text="@string/btn_text_result"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textbox_tec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_choose_stock_result"
            android:text="技術面指標"
            android:textSize="18dp"
            android:textColor="#000000"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/tec_break_5ma_up"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_5ma_up_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_10ma_up"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_10ma_up_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_20ma_up"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="330dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_20ma_up_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_5ma_down"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_5ma_down_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_10ma_down"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_10ma_down_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_20ma_down"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="330dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_20ma_down_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_day_kd_up"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="430dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/break_day_kd_up_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_day_kd_down"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="430dp"
            android:background="@drawable/bg_short_btn"
            android:text="@string/break_day_kd_down_button"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tec_break_day_MACD_up"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="530dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/day_MACD_break_up_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tec_break_day_MACD_down"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="530dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/day_MACD_break_down_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/stock_volume"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="630dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="月均量>1000"
            android:textColor="#000000"
            android:textSize="14sp" />

    </RelativeLayout>
</ScrollView>