<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_pick"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/activity_picking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">

        <Button
            android:id="@+id/return_home"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_btn"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="回首頁"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/num_choose_text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/btn_text_choosenum"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="130dp"/>

        <TextView
            android:id="@+id/stock_num_choose_text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="符合條件有0隻股票"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="125dp"/>

        <Button
            android:id="@+id/pickend_next"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_btn"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="0dp"
            android:text="@string/btn_text_result"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textbox_chip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_choose_stock_result"
            android:text="籌碼面指標"
            android:textSize="18dp"
            android:textColor="#000000"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/chip_foreign_investor_buyout_3days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/foreign_investor_buyout_3days_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/chip_foreign_investor_buyout_5days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/foreign_investor_buyout_5days_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/chip_investment_trust_buyout_3days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="330dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/investment_trust_buyout_3days_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/chip_investment_trust_buyout_5days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_long_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="430dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/investment_trust_buyout_5days_button"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/chip_foreign_investor_soldout_3days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/foreign_investor_soldout_3days_button"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginStart="230dp" />

        <Button
            android:id="@+id/chip_foreign_investor_soldout_5days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/foreign_investor_soldout_5days_button"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginStart="230dp" />

        <Button
            android:id="@+id/chip_investment_trust_soldout_3days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="330dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/investment_trust_soldout_3days_button"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginStart="230dp" />

        <Button
            android:id="@+id/chip_investment_trust_soldout_5days"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_short_btn"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="430dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/investment_trust_soldout_5days_button"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginStart="230dp" />


    </RelativeLayout>
</ScrollView>